--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -24,8 +24,7 @@
       <td style="width:50%;height:20%">
         <div name="Add Clients" class="card">
           <a href="/clients/addClient">
-            <img class="card-img mx-auto d-block"
-              src="https://image.flaticon.com/icons/png/512/166/166260.png"
+            <img class="card-img mx-auto d-block" src="https://image.flaticon.com/icons/png/512/166/166260.png"
               style="width:70%;height:250px">
             {{!--
             https://www.flaticon.com/svg/vstatic/svg/166/166260.svg?token=exp=1613883793~hmac=3c6be35bda80b84621c1777b76fca2ad
@@ -76,4 +75,6 @@
 <footer>
 
   <p>Created by KYGM and KRR for KGYM Services</p>
+  <br />
+  <p>Version 1.55</p>
 </footer>
