--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,7 @@
 <div class="jumbotron text-center">
+  <h3>Todays Date</h3>
+  <h3>{{title}}</3>
   <h3 class="display-3">
-    {{title}}
     <p class="lead">KYGM Services Client Tracking</p>
   </h3>
 </div>
@@ -75,6 +76,5 @@
 <footer>
 
   <p>Created by KYGM and KRR for KGYM Services</p>
-  <br />
   <p>Version 1.55</p>
 </footer>
