--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -74,7 +74,7 @@
 </div>
 </table>
 <footer>
-
+{{!-- in my opinion, authors and version number should all be on one line as the footer, and maybe include a last updated date as well. have you looked into trying to pull the version number/date updated directly from github? --}}
   <p>Created by KYGM and KRR for KGYM Services</p>
   <p>Version 1.55</p>
 </footer>
