--- a/views/clients/login.handlebars
+++ b/views/clients/login.handlebars
@@ -11,7 +11,7 @@
     <!-- Login Form -->
     <form action="login" method="post">
       <input type="text" id="login" class="fadeIn second" name="username" placeholder="username">
-      <input type="text" id="password" class="fadeIn third" name="password" placeholder="password">
+      <input type="password" id="password" class="fadeIn third" name="password" placeholder="password">
       <input type="submit" class="fadeIn fourth" value="Log In">
     </form>
 
