--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -1,27 +1,30 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="/">KYGM Services</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                  <li class="nav-item active">
-                        <a class="nav-link" href="/clients/addClient">Add Clients <span
-                                    class="sr-only">(current)</span></a>
-                  </li>
-                  <li class="nav-item">
-                        <a class="nav-link" href="/clients/viewClient">View Clients</a>
-                  </li>
-                  <li class="nav-item">
-                        <a class="nav-link" href="/clients/viewTransact">View Transactions</a>
-                  </li>
-                  <li class="nav-item">
-                        <a class="nav-link" href="/about">About</a>
-                  </li>
-                  <li class="nav-item">
-                        <a class="nav-link" href="/clients/logout">Logout</a>
-                  </li>
-            </ul>
-      </div>
-</nav>
+<head>
+      <link rel="shortcut icon" href="https://freepngimg.com/download/temp/23129-7-tools_16x16.ico" />
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="/">KYGM Services</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav">
+                        <li class="nav-item active">
+                              <a class="nav-link" href="/clients/addClient">Add Clients <span
+                                          class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                              <a class="nav-link" href="/clients/viewClient">View Clients</a>
+                        </li>
+                        <li class="nav-item">
+                              <a class="nav-link" href="/clients/viewTransact">View Transactions</a>
+                        </li>
+                        <li class="nav-item">
+                              <a class="nav-link" href="/about">About</a>
+                        </li>
+                        <li class="nav-item">
+                              <a class="nav-link" href="/clients/logout">Logout</a>
+                        </li>
+                  </ul>
+            </div>
+      </nav>
+</head>
