--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,9 @@
 <div class="jumbotron text-center">
   <h3>Todays Date</h3>
   <h3>{{title}}</3>
-  <h3 class="display-3">
-    <p class="lead">KYGM Services Client Tracking</p>
-  </h3>
+    <h3 class="display-3">
+      <p class="lead">KYGM Services Client Tracking</p>
+    </h3>
 </div>
 <div name="main">
   <table>
@@ -11,8 +11,7 @@
       <td style="width:50%;height:20%">
         <div name="View Clients" class="card">
           <a href="/clients/viewClient">
-            <img class="card-img mx-auto d-block"
-              src="https://publicdomainvectors.org/download.php?file=1536431611.svg"
+            <img class="card-img mx-auto d-block" src="https://publicdomainvectors.org/download.php?file=1536431611.svg"
               style="height:250px">
             {{!-- https://www.vippng.com/png/detail/503-5038892_define-permissions-for-users-and-groups-to-control.png
             --}}
