--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -19,7 +19,7 @@
                               <a class="nav-link" href="/clients/viewTransact">View Transactions</a>
                         </li>
                         <li class="nav-item">
-                              <a class="nav-link" href="/about">About</a>
+                              <a class="nav-link" href="/website/index">About</a>
                         </li>
                         <li class="nav-item">
                               <a class="nav-link" href="/clients/logout">Logout</a>
