--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
   <title>KYGM Services</title>
 </head>
 
-<body>
+<body style="background-color:lightblue;">
   {{>_navbar}}
 
   <div class="container">
