--- a/views/website/kygm_services.handlebars
+++ b/views/website/kygm_services.handlebars
@@ -1,1 +1,54 @@
-<p>Test</p>
+<div class="container">
+  <div class="row">
+    <!-- Post content-->
+    <div class="col-lg-8">
+      <!-- Title-->
+      <h1 class="mt-4">KYGM Services</h1>
+      <!-- Author-->
+      <p class="lead">by Kevin Gutierrez</p>
+
+      <hr />
+      <!-- Date and time-->
+      <p></p>
+      <hr />
+      <!-- Preview image-->
+      <img class="img-fluid rounded" src="https://i.imgur.com/ec5yC87.png" alt="..." />
+      <hr />
+      <!-- Post content-->
+      <p class="lead">How did I begin KYGM Services?</p>
+      <p>Backstory/Context: In the fall of 2017, I was working for Evergreen acres dairy.
+        Evergreen Acres Dairy is a medium size dairy operation with over 3000 head of cattle,
+        at the time of writing of this article. In the milking process, the cows
+        udders must be cleaned of contaminants, and disinfected. This was done by using
+        a device known as a teat scrubber. My job was to reapir the teat scrubbers when
+        they failed in operation.
+      </p>
+      <p>When I would order parts for the teat scrubbers, I was shocked to see the exorbadent prices
+        of the parts. I proposed a plan to purchase a 3D printer with company money to manufacture
+        some of the internal parts, specifically some plastic gears that constantly wore out. The boss
+        stated that he was not interested in experimenting with 3D printers, but offered an alternate plan:
+        I purchase the 3D printer, and if the parts are functional, he would purchase them at half price from me.
+      </p>
+
+      <p>After some experimentation, I was able to create functional parts for a fraction of a cent. I then sold
+        the parts at half price (25 dollars per gear for example). Thus, KYGM Services was born.
+      </p>
+      <p>Eventually, I moved on to translating for the over 50 hispanic employees at the farms, repairing
+        their vehicles, ordering items online for them, and assisting them with various other tasks.
+      </p>
+      <p class="lead">Services Offered</p>
+      <h5>* In Person Spanish Translating</h5>
+      <h5>* Small Engine Repair</h5>
+      <h5>* Mobile and Server Development</h5>
+      <h5>* Welding</h5>
+      <h5>* Investing Advice</h5>
+      <h5>* Computer Repair</h5>
+      <h5>* 3D Printing</h5>
+      <h5>* Software Consulting</h5>
+      <h5>* Towing Services</h5>
+
+      <hr />
+
+
+    </div>
+  </div>
