--- a/views/website/small_engines.handlebars
+++ b/views/website/small_engines.handlebars
@@ -1,1 +1,47 @@
-<p>smallengines</p>
+<div class="container">
+  <div class="row">
+    <!-- Post content-->
+    <div class="col-lg-8">
+      <!-- Title-->
+      <h1 class="mt-4">Small Engine Repair</h1>
+      <!-- Author-->
+      <p class="lead">by Kevin Gutierrez</p>
+
+      <hr />
+      <!-- Date and time-->
+      <p></p>
+      <hr />
+      <!-- Preview image-->
+      <img class="img-fluid rounded" src="https://i.imgur.com/cUwwPQo.jpg" alt="..." />
+      <hr />
+      <!-- Post content-->
+      <p class="lead">What got me into Small Engine Repair</p>
+      <p>
+        Ever since I was in my pre-teens, I loved anything that was powered by a
+        small engine. I first purchased a 2 stroke weed trimmer for a couple bucks, and I
+        learned to fix it up by looking at forums and youtube videos. It progressed from
+        small lawn equipment to low displacement dirt bikes, to four wheelers and old gas
+        powered tractors.
+      </p>
+      <p>
+        The only formal education I recieved (In relation to small engine repair), was a
+        Small Engines class in high school, and an advanced mechanics class in my junior year
+        of high school. We covered most of the important topics in the world of engine repair,
+        from studying the theory behind how an engine works, to troubleshooting common problems.
+      </p>
+
+      <p>
+        I gained the most experience by buying and selling powersports vehicles. This provided a
+        financial incentive to learn more about small engine repair, and it also provided me with
+        a constant supply of off road vehicles to ride.
+      </p>
+
+      <p class="lead">These are some of my past projects</p>
+
+      <a href="https://imgur.com/P3uwJE1"><img style="max-width:600px;width:100%" src="https://i.imgur.com/P3uwJE1.jpg" title="source: imgur.com" /></a>
+
+      <hr />
+
+
+    </div>
+  </div>
