--- a/views/website/developing.handlebars
+++ b/views/website/developing.handlebars
@@ -1,1 +1,53 @@
-<p>developing</p>
+<div class="container">
+  <div class="row">
+    <!-- Post content-->
+    <div class="col-lg-8">
+      <!-- Title-->
+      <h1 class="mt-4">Software Development</h1>
+      <!-- Author-->
+      <p class="lead">by Kevin Gutierrez</p>
+
+      <hr />
+      <!-- Date and time-->
+      <p></p>
+      <hr />
+      <!-- Preview image-->
+      <img class="img-fluid rounded" src="https://i.imgur.com/vdYCct8.png" alt="..." />
+      <hr />
+      <!-- Post content-->
+      <p class="lead">How I got into Software Development</p>
+      <p>
+        Back in late 2015, I recieved my first graphing calculator (A TI-84) from my
+        uncle. In math, we were introduced to functions such as the quadriatic equation,
+        and the pythagorean therom. Manually plugging in all the variables into the calculator
+        seemed like a chore, so I looked into programming the calculator to take user input and
+        do the required mathematical operations. Without realizing, I was slowly becoming a developer.
+      </p>
+      <p>
+        Eventually, I began following tutorials on youtube to create html websites when I was in 9th and 10th
+        grade. Following the advice given to me from my math teacher, I decided to enroll in the Computer Programmer
+        (AAS) program at SCTCC in spring of 2019, which happened to be my senior year of high school.
+      </p>
+
+      <p>
+        At SCTCC, I learned to develop applications using Java, PHP, C#, Javascript, MongoDB,
+        SQL (both Microsoft and MySQL), and Dart.
+      </p>
+
+      <p class="lead">Past Projects</p>
+      <h5>* Web application to track clients and transactions</h5>
+      <h5>* Web application to track work orders <br /> and reciepts
+        for an auto shop</h5>
+      <h5>* Android and ios application to track clients and transactions</h5>
+      <h5>* Android and ios application to track expenses</h5>
+      <h5>* C# application to provide secure messaging <br /> that uses
+        end to end encryption</h5>
+      <h5>* Various Arduino applications that take in sensor <br /> data and
+        do tasks from interfacing with relays to sending messages to a GSM Module </h5>
+      <h5>* Various Java applications that use JavaFX</h5>
+
+      <hr />
+
+
+    </div>
+  </div>
