--- a/views/website/firefighting.handlebars
+++ b/views/website/firefighting.handlebars
@@ -1,1 +1,36 @@
-<p>developing</p>
+<div class="container">
+  <div class="row">
+    <!-- Post content-->
+    <div class="col-lg-8">
+      <!-- Title-->
+      <h1 class="mt-4">Firefighting</h1>
+      <!-- Author-->
+      <p class="lead">by Kevin Gutierrez</p>
+
+      <hr />
+      <!-- Date and time-->
+      <p></p>
+      <hr />
+      <!-- Preview image-->
+      <img class="img-fluid rounded" src="https://i.imgur.com/xKIx6Nz.jpg" alt="..." />
+      <hr />
+      <!-- Post content-->
+      <p class="lead">How I got into firefighting</p>
+      <p>
+        In my senior year of high school, I was required to attend a city council meeting
+        for my college political science class. At the city council meeting, I asked the
+        fire chief how the fire department was going. He responded with "Good", and asked
+        me if I wanted to join immediately after. After some careful consideration, I decided to apply, and
+        once I turned 18, I was given a fire pager. Following that, as many people say, the rest is history.
+      </p>
+
+      <p class="lead">A few relavent photos</p>
+      <img class="img-fluid rounded" src="https://i.imgur.com/OjJY6Tx.png" alt="..." />
+      <img class="img-fluid rounded" src="https://i.imgur.com/NaSIlLH.png" alt="..." />
+
+
+      <hr />
+
+
+    </div>
+  </div>
