--- a/views/website/investing.handlebars
+++ b/views/website/investing.handlebars
@@ -1,1 +1,42 @@
-<p>investing</p>
+<div class="container">
+  <div class="row">
+    <!-- Post content-->
+    <div class="col-lg-8">
+      <!-- Title-->
+      <h1 class="mt-4">Investing</h1>
+      <!-- Author-->
+      <p class="lead">by Kevin Gutierrez</p>
+
+      <hr />
+      <!-- Date and time-->
+      <p></p>
+      <hr />
+      <!-- Preview image-->
+      <img class="img-fluid rounded" src="https://i.imgur.com/AGG5rGz.png" alt="..." />
+      <hr />
+      <!-- Post content-->
+      <p class="lead">How I got into Investing</p>
+      <p>
+        In early 2017, my dad bought me a 1 oz silver coin. From there, I spent almost every penny
+        I earned on silver and gold. I did this until I turned 18 in the winter of 2018. I opened an
+        E*TRADE brokerage account the day that I turned 18 and began investing every cent I had into
+        energy sector and high dividend yield funds. Currently, I have three brokerage accounts and
+        some precious metals.
+      </p>
+      <p>
+        Recently I began looking into crypto. It's extremely volitile, and I have less than $1000 in
+        cryptocurrencies. I may purchase more cryptos if they begin to be accepted as a form of payment
+        in more places.
+      </p>
+
+      <p class="lead">Here are some of my current holdings</p>
+      <img class="img-fluid rounded" src="https://i.imgur.com/lm0bY6O.png" alt="..." />
+      <img class="img-fluid rounded" src="https://i.imgur.com/lm0bY6O.png" alt="..." />
+      <img class="img-fluid rounded" src="https://i.imgur.com/89DCXhw.png" alt="..." />
+
+
+      <hr />
+
+
+    </div>
+  </div>
