--- a/views/website/translating.handlebars
+++ b/views/website/translating.handlebars
@@ -1,1 +1,31 @@
-<p>translating</p>
+<div class="container">
+  <div class="row">
+    <!-- Post content-->
+    <div class="col-lg-8">
+      <!-- Title-->
+      <h1 class="mt-4">Translating</h1>
+      <!-- Author-->
+      <p class="lead">by Kevin Gutierrez</p>
+
+      <hr />
+      <!-- Date and time-->
+
+      <!-- Post content-->
+      <p class="lead">How I got into translating</p>
+      <p>
+        In my junior year of high school, I was asked a few times to translate for some of the
+        employees at the farms I worked at. I was more than happy to help, free of charge.
+        Each time, however, I was offered payment for translating. I eventually began marketing
+        my services at the farms and I've been doing private medical, legal, and general in
+        person translating since.
+      </p>
+
+      <p class="lead">Two great clients and myself</p>
+      <img class="img-fluid rounded" src="https://i.imgur.com/gP5f8o2.jpg" alt="..." />
+      <figcaption>Left to right: Hugo G.R, Kevin G.M, Gilberto G.R</figcaption>
+
+      <hr />
+
+
+    </div>
+  </div>
