--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -22,6 +22,9 @@
                               <a class="nav-link" href="/website/index">About</a>
                         </li>
                         <li class="nav-item">
+                              <a class="nav-link" href="/clients/login">Login</a>
+                        </li>
+                        <li class="nav-item">
                               <a class="nav-link" href="/clients/logout">Logout</a>
                         </li>
                   </ul>
